k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang
  labels:
    name: golang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
        - name: golang
          image: pedroschmid2311/golang-app:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
