k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang
  labels:
    name: golang
spec:
  type: ClusterIP
  selector:
    app: golang
  ports:
    - name: golang
      protocol: TCP
      port: 80
      targetPort: 8080
