k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang
  labels:
    name: golang
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/golang"
            backend:
              service:
                name: golang
                port:
                  number: 80
